fix: prevent queue page horizontal overflow

--- a/admin/scss/base/_base.scss
+++ b/admin/scss/base/_base.scss
@@ -7,5 +7,5 @@
 
 // General wrapper
 .mskd-wrap {
-  width: 100%;
+  width: auto;
 }
