--- a/admin/scss/components/_queue.scss
+++ b/admin/scss/components/_queue.scss
@@ -79,15 +79,14 @@
 }
 
 .mskd-queue-table {
+  width: 100%;
   min-width: 100%;
 
   .mskd-col-subject {
-    width: 100%;
-    min-width: 220px;
+    width: auto;
   }
 
   .mskd-subject-cell {
-    min-width: 220px;
     word-break: normal;
     overflow-wrap: anywhere;
 
